--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -12,7 +12,7 @@
         min-width: 100px;
       }
     }
-    .main {
-      padding: 30px;
-    }
+    // .main {
+    // //   padding: 30px;
+    // }
   }
